# quakeworld

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-on-commit.yml  test.yml
examples/: atlas_animation.rs  atlas_animation_gif.rs  bsp.rs  client.rs  mdl.rs  mvd_frame_statistics.rs  mvd_parallel_parser.rs  mvd_parser.rs  pak.rs  pak_creator.rs  qtv.rs  trace.rs  trace_generate.rs
protocol-macros/: Cargo.toml
protocol-macros/src/: datatypeboundcheck.rs  datatyperead.rs  datatypesize.rs  helpers.rs  lib.rs  parsemessage.rs
protocol-macros/src/datatyperead/: argument_parser.rs  field_options.rs
src/: lib.rs
src/bsp/: error.rs  mod.rs
src/crc/: checksum_table.rs
src/datatypes/: bsp.rs  common.rs  error.rs  mdl.rs  mod.rs  pak.rs  reader.rs
src/datatypes/reader/: environment.rs  error.rs  mod.rs
src/lmp/: mod.rs
src/mdl/: error.rs  mod.rs
src/mvd/: mod.rs
src/network/: channel.rs
src/network/connection/: client.rs
src/pak/: error.rs  mod.rs
src/protocol/: errors.rs  types.rs
src/protocol/message/: mod.rs  trace.rs  trace_dummy.rs  trace_real.rs
src/qtv/: mod.rs
src/state/: mod.rs
src/texture/: atlas.rs  error.rs  mod.rs  png.rs
src/trace/: dummy.rs  mod.rs  real.rs
src/utils/: mod.rs  perf.rs  trace.rs  userinfo.rs
src/vfs/: error.rs  meta.rs  mod.rs  path.rs
src/vfs/internal_node/: directory.rs  file.rs  mod.rs  pak.rs
tests/: atlas_integration.rs  datareader_integration.rs  vfs_integration.rs
