[package]
name = "quakeworld"
version = "0.3.0"
edition = "2021"
authors = ["Jürgen Legler <jogihoogi@gmail.com>"]
license = "MIT"
keywords = ["quakeworld", "quake"]
homepage = "https://github.com/jogi1/quakeworld"
repository = "https://github.com/jogi1/quakeworld"
description = """
A collection of quakeworld related libraries.
"""

[lib]

[features]
default = [
  "mvd",
  "utils",
  "protocol",
  "state",
  "network",
  "connection",
  "crc",
  "pak",
  "mdl",
  "lmp",
  "bsp",
  "qtv",
  "vfs",
]
connection = ["protocol", "state", "network", "crc", "ascii_strings"]
state = ["protocol", "utils"]
mvd = ["utils", "protocol"]
utils = []
protocol = ["protocol-macros"]
ascii_strings = ["utils"]
network = []
trace = []
crc = []
pak = []
mdl = []
lmp = []
bsp = []
qtv = []
vfs = []

example-ratatui = ["ratatui", "crossterm", "color-eyre", "anyhow", "palette"]
traceviewer = ["clap", "ratatui", "crossterm", "color-eyre", "trace"]

[dependencies]
protocol-macros = { version = "0.0.2", path = "./protocol-macros", package = "quakeworld-protocol-macros", optional = true }
thiserror = "1.0.26"
num_enum = "0.2.3"
byteorder = "1.4.3"
paste = "1"
strum = "0.24"
strum_macros = "0.24"
bitflags = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
lazy_static = "1.4.0"
termcolor = "1.1.3"
quote = "1.0.21"
unstringify = "0.1.4"
png = "0.17.11"
anyhow = { version = "1.0.81", optional = true }
palette = { version = "0.7.5", optional = true }
uuid = { version = "1.13.1", features = ["v4"] }
time = { version = "0.3.37", features = ["formatting"] }
proc-macro2 = "1.0.93"

# binary dependencies
clap = { version = "4.5.9", features = ["derive", "cargo"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28.1", optional = true }
color-eyre = { version = "0.6.2", optional = true }

[dev-dependencies]
gif = "0.13.1"
# ratatui = { optional = true, features = ["crossterm"] }
# crossterm = { optional = true }

[[example]]
name = "trace_generate"
required-features = ["trace"]

[[bin]]
name = "traceviewer"
required-features = ["traceviewer"]
